<resources>
    <string name="app_name">Perpetual Calendar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_date_calculator">Kalkulator daty</string>
    <string name="title_year_selection">Wybór roku</string>
    <string name="title_shopping_sunday">Niedziele handlowe</string>
    <string name="calculator">Kalkulator</string>
    <string name="shopping_sunday_list">Niedziele handlowe</string>
    <string name="year_selection">Wybór roku</string>
    <string name="select_year">Wybierz interesujący ciebie rok:</string>
    <string name="moving_events">Ruchome święta w tym roku:</string>
    <string name="shopping_sundays_this_year">Niedziele handlowe w wybranym roku:</string>
    <string name="date_diff_calc">Kalkulator różnicy pomiędzy datami</string>
    <string name="cant_calculate_date_diff">Nie można obliczyć różnicy pomiędzy datami. Sprawdź poprawność danych!</string>
    <string name="day_diff_equals">Różnica dni pomiedzy datami wynosi \"</string>
    <string name="days">\" dni</string>
    <string name="end_date">Data końcowa</string>
    <string name="start_date">Data początkowa</string>
    <string name="day_diff_equals_full">Różnica dni roboczych pomiędzy datami wynosi \"</string>
</resources>