<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_year_selection">

    <fragment
        android:id="@+id/navigation_year_selection"
        android:name="com.cherit.perpetualcalendar.ui.year_selection.YearSelectionFragment"
        android:label="@string/title_year_selection"
        tools:layout="@layout/fragment_year_selection" />

    <fragment
        android:id="@+id/navigation_date_calculator"
        android:name="com.cherit.perpetualcalendar.ui.date_calculator.DateCalculatorFragment"
        android:label="@string/title_date_calculator"
        tools:layout="@layout/fragment_date_calculator" />

    <fragment
        android:id="@+id/navigation_shopping_sunday_list"
        android:name="com.cherit.perpetualcalendar.ui.shopping_sunday.ShoppingSundayFragment"
        android:label="@string/title_shopping_sunday"
        tools:layout="@layout/fragment_shopping_sunday" />

</navigation>