<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.date_calculator.DateCalculatorFragment">

    <TextView
        android:id="@+id/date_calculator_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date_diff_calc"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/date_picker_from_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="clip_horizontal|center_vertical|end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_calculator_text_view">

        <TextView
            android:id="@+id/date_from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/start_date" />

        <DatePicker
            android:id="@+id/date_from"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:focusableInTouchMode="false"
            android:startYear="1990" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/date_picker_to_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center_vertical|end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_from_layout">

        <TextView
            android:id="@+id/date_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/end_date" />

        <DatePicker
            android:id="@+id/date_to"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:focusableInTouchMode="false"
            android:startYear="1990" />
    </LinearLayout>

    <TextView
        android:id="@+id/date_calculator_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_to_layout" />

    <TextView
        android:id="@+id/date_calculator_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_calculator_errors" />

    <TextView
        android:id="@+id/date_calculator_results_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_calculator_errors" />

</androidx.constraintlayout.widget.ConstraintLayout>